--- a/package.json
+++ b/package.json
@@ -68,12 +68,13 @@
     "prettier": "^1.15.2",
     "standard-version": "^4.4.0",
     "trash-cli": "^1.4.0",
+    "ts-node": "^8.0.1",
     "tsconfig-paths": "^3.7.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-immutable": "^5.0.0",
     "typedoc": "^0.13.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.2.4"
   },
   "ava": {
     "failFast": true,
