--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
 ports:
   - port: 1337
 tasks:
-  - command: "npm install && npm run start"
+  - command: "npm install typescript ts-node --global && npm install && npm run start"
